# Voxel-Carving

./: .gitignore  CMakeLists.txt  README.md
assets/: squirrel.stl  viff.xml
src/: main.cpp
